# ardupilot-rpi-pico

./: .gitmodules  wscript
Rover/: version.h
Tools/ardupilotwaf/: boards.py  pico.py  rp2040.py
Tools/pico_cmake/: CMakeLists.txt
libraries/AP_DAL/: AP_DAL.cpp
libraries/AP_Filesystem/: AP_Filesystem.cpp  AP_Filesystem.h  AP_Filesystem_rp2040ChibiOS.cpp  AP_Filesystem_rp2040ChibiOS.h
libraries/AP_GPS/: AP_GPS_MAV.cpp
libraries/AP_HAL/: AP_HAL_Boards.h
libraries/AP_HAL/board/: rp2040chibios.h  rpipico.h
libraries/AP_HAL_RpiPico/: AP_HAL_RpiPico.h  AP_HAL_RpiPico_Namespace.h  AP_HAL_RpiPico_Private.h  AnalogIn.cpp  AnalogIn.h  BgThread.cpp  BgThread.h  Console.cpp  Console.h  GPIO.cpp  GPIO.h  HAL_RpiPico_Class.cpp  HAL_RpiPico_Class.h  I2CDevice.cpp  I2CDevice.h  RCInput.cpp  RCInput.h  RCOutput.cpp  RCOutput.h  SPIDevice.cpp  SPIDevice.h  Scheduler.cpp  Scheduler.h  Semaphores.cpp  Semaphores.h  Storage.cpp  Storage.h  UARTDriver.cpp  UARTDriver.h  Util.cpp  Util.h  system.cpp
libraries/AP_HAL_rp2040ChibiOS/: AP_HAL_rp2040ChibiOS.h  AP_HAL_rp2040ChibiOS_Namespace.h  AP_HAL_rp2040ChibiOS_Private.h  AnalogIn.cpp  AnalogIn.h  Device.cpp  Device.h  GPIO.cpp  GPIO.h  HAL_rp2040ChibiOS_Class.cpp  HAL_rp2040ChibiOS_Class.h  I2CDevice.cpp  I2CDevice.h  RCInput.cpp  RCInput.h  RCOutput.cpp  RCOutput.h  SPIDevice.cpp  SPIDevice.h  Scheduler.cpp  Scheduler.h  Semaphores.cpp  Semaphores.h  Storage.cpp  Storage.h  UARTDriver.cpp  UARTDriver.h  UsbCdcConsole.cpp  UsbCdcConsole.h  Util.cpp  Util.h  stdio.cpp  system.cpp
(+27 files in other folders)
